fixed container naming clash to fix extra padding error in homepage

--- a/src/main/webapp/app/home/home.component.scss
+++ b/src/main/webapp/app/home/home.component.scss
@@ -48,7 +48,7 @@
   text-decoration: underline;
 }
 
-.container2 {
+.container6 {
   display: flex;
   background-color: #9d7e5f;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
